--- a/gb/22/1/1/n13474247.md
+++ b/gb/22/1/1/n13474247.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵加州橙县大爆满 主流精英享受非凡之旅</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13474250-211231232953815-600x400.jpg" />
 <h6>2021年12月31日下午，神韵国际艺术团在加州橙县柯斯塔梅莎表演艺术中心的第二场演出大爆满。（季媛／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年01月01日讯】（大纪元美国柯斯塔梅莎记者站报导）2021年的最后一天，<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在加州橙县<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E6%9F%AF%E6%96%AF%E5%A1%94%E6%A2%85%E8%8E%8E%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">柯斯塔梅莎表演艺术中心</a>（Costa Mesa Segerstrom Center for the Arts）的第二场演出，继续缔造大爆满的票房纪录。</p>
-<p>“疫情不影响看<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>。”“这实在是神来之笔，天外杰作，前所未见。”“我觉得演出让人充满希望。”主流精英们对神韵演出发出连连的赞叹，演出期间用不间断的掌声，一次次地表达了他们对神韵艺术家们的敬佩之情。</p>
+	<p>【大纪元2022年01月01日讯】（大纪元美国柯斯塔梅莎记者站报导）2021年的最后一天，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在加州橙县<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9F%AF%E6%96%AF%E5%A1%94%E6%A2%85%E8%8E%8E%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">柯斯塔梅莎表演艺术中心</a>（Costa Mesa Segerstrom Center for the Arts）的第二场演出，继续缔造大爆满的票房纪录。</p>
+<p>“疫情不影响看<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>。”“这实在是神来之笔，天外杰作，前所未见。”“我觉得演出让人充满希望。”主流精英们对神韵演出发出连连的赞叹，演出期间用不间断的掌声，一次次地表达了他们对神韵艺术家们的敬佩之情。</p>
 <h2>地产开发商感受愉悦 “疫情不影响看神韵”</h2>
-<figure id="attachment_13474255" aria-describedby="caption-attachment-13474255" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/01/id13474255-2112312052432153.jpg"><img class="size-large wp-image-13474255" title="" src="https://i.epochtimes.com/assets/uploads/2022/01/id13474255-2112312052432153-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13474255" class="wp-caption-text">2021年12月31日，Richard Denzer携太太观看了神韵国际艺术团在美国加州橙县<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E6%9F%AF%E6%96%AF%E5%A1%94%E6%A2%85%E8%8E%8E%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">柯斯塔梅莎表演艺术中心</a>的第二场演出。（李清怡／大纪元）</figcaption></figure>
+<figure id="attachment_13474255" aria-describedby="caption-attachment-13474255" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/01/id13474255-2112312052432153.jpg"><img class="size-large wp-image-13474255" title="" src="https://i.epochtimes.com/assets/uploads/2022/01/id13474255-2112312052432153-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13474255" class="wp-caption-text">2021年12月31日，Richard Denzer携太太观看了神韵国际艺术团在美国加州橙县<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9F%AF%E6%96%AF%E5%A1%94%E6%A2%85%E8%8E%8E%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">柯斯塔梅莎表演艺术中心</a>的第二场演出。（李清怡／大纪元）</figcaption></figure>
 <p>Richard Denzer是位资深建筑师和地产开发商，从业四十多年，拥有自己的地产开发公司。他参与了众多的国际国内大型项目的设计和承建，承建项目总价超过100亿美元。他曾担任全球最大承建商CRSS的项目设计师，期间参与了橙县表演艺术中心的设计和建设。他来到自己所设计的剧院观看神韵演出，让他颇有一番感慨。</p>
 <p>“演出太棒了，很精彩，让人非常愉悦。我觉得这是个很好的故事线，串起一系列很好的故事。能在节目册里看到故事大纲很有帮助，因为能看到他们要表现的故事，这很棒。”</p>
 <p>“节目册能帮助理解节目的内容，故事本身也在做出诠释。我觉得能听到、了解到这样（宗教迫害）的故事很好，我希望能看到更多的（宗教）自由。我在东京长大，六十年代曾在香港住过，看到（香港）正在发生的事情很痛心。”</p>
-<p>Denzer尤为喜欢神韵的<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，“因为我喜欢其色彩运用和繁花锦簇，这也是亚洲族群的特色，表现出他们的艺术表现手法和方式的深度，我觉得这很酷。”</p>
-<p>他也对神韵乐团的音乐赞不绝口，“很精彩，非常好，也极佳地配合<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，非常到位。”Denzer夫妇也很喜欢神韵演出中使用的动态天幕。</p>
+<p>Denzer尤为喜欢神韵的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，“因为我喜欢其色彩运用和繁花锦簇，这也是亚洲族群的特色，表现出他们的艺术表现手法和方式的深度，我觉得这很酷。”</p>
+<p>他也对神韵乐团的音乐赞不绝口，“很精彩，非常好，也极佳地配合<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，非常到位。”Denzer夫妇也很喜欢神韵演出中使用的动态天幕。</p>
 <p>这是他们第一次观赏神韵，不过他们几年前就动念想看，“今年我们有这个机会，又有时间，所以就来了。”</p>
 <p>虽然在疫情期间，但他们觉得没关系，而且也推荐自己的朋友观看。“没问题，来看吧，你会很开心，来欣赏这场演出，欣赏其色彩、欣赏其喜乐、欣赏其故事，同时也来欣赏这表演艺术中心。”他说。</p>
 <h2>大型文化商业培训公司创办人：观赏神韵是非凡的文化之旅</h2>
@@ -24,8 +24,8 @@
 <p>神韵艺术团独创的动态天幕令Bath啧啧称奇：“我很喜欢演出的视觉特效。演员们从天幕跳到舞台上，简直不可思议！这实在是神来之笔，天外杰作，前所未见。真是创意非凡。”</p>
 <p>作为文化培训专家，Bath从演出中获得了启迪：“有些（舞蹈节目）表现的历史片断对我很有启发，我从中了解到更多的中华文化。我本人对中国文化有所认识。（这些年来）西方人移居中国，中国人移民美国，这种交流是好的，我们得以在生活中体验文化。”</p>
 <p>她说：“‘神韵’的意涵及其传递的精神，虽然我并不确定那种意境，但确实受到启迪。这些年我看到了神韵的广告，但一直没有机会到现场观看。看看吧，神韵不断地发展壮大，从2006年的一个艺术团扩大到今天的七个团。所以我今天能来现场观看，真是幸运。”</p>
-<p>神韵演出呈现了殊胜的神佛世界，Bath认为，这种关于神性和精神层面的内容令人神往，“我非常喜欢倾听人们从<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>中获得激励的各类故事，这总是让我心情激动。因为那就是我平时指导他人所谈的，有关人们信奉的不同的价值观和信仰，人是从哪里来的，了解不同形式的神性或信仰。这是引人入胜的话题，这也是我的事业选择。”</p>
-<p>Bath说，要把五千年的文化浓缩在两小时的演出里是很不容易的。演出让人们对中国历史产生兴趣，想要更深入地了解。对于反映中国大陆<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>者反迫害的节目，她表示：“这是当今中国的现实，表现这一部分是重要的。”</p>
+<p>神韵演出呈现了殊胜的神佛世界，Bath认为，这种关于神性和精神层面的内容令人神往，“我非常喜欢倾听人们从<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>中获得激励的各类故事，这总是让我心情激动。因为那就是我平时指导他人所谈的，有关人们信奉的不同的价值观和信仰，人是从哪里来的，了解不同形式的神性或信仰。这是引人入胜的话题，这也是我的事业选择。”</p>
+<p>Bath说，要把五千年的文化浓缩在两小时的演出里是很不容易的。演出让人们对中国历史产生兴趣，想要更深入地了解。对于反映中国大陆<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>者反迫害的节目，她表示：“这是当今中国的现实，表现这一部分是重要的。”</p>
 <p>演出当天恰好是Bath的生日，她开心地向世界各地的朋友推荐神韵演出：“这是一场美丽的、关于历史的、鼓舞人心的、令人激动的演出。”</p>
 <p>Valerie Bath创办了一家全球文化商业培训公司，为许多大型公司包括跨国公司，提供文化咨询和培训服务，并担任北美分部的执行长。她直接辅导过五百多人、培训过二千多名不同文化的公司雇员。之前她曾任职于全球领先的管理咨询公司Accenture。</p>
 <h2>营养品和制药公司副总裁致谢神韵艺术家</h2>
@@ -45,43 +45,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/12/31/n13471574.md#1">音乐制作人：神韵二胡独奏神妙非凡</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/12/31/n13471596.md#1">神韵散发强大能量 佛州艺术界收到深层信息</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/12/31/n13471650.md#1">律师所合伙人：神韵保存古老文化的精髓</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/12/31/n13471671.md#1">承包商看神韵感受“爱和慈善”的信息</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/12/31/n13471693.md#1">公司老板：疫情当下 神韵让人坚强给人希望</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/12/31/n13471805.md#1">神韵橙县首场售罄 观众赞神韵总监是天才</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/12/31/n13471574.md#1">音乐制作人：神韵二胡独奏神妙非凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/12/31/n13471596.md#1">神韵散发强大能量 佛州艺术界收到深层信息</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/12/31/n13471650.md#1">律师所合伙人：神韵保存古老文化的精髓</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/12/31/n13471671.md#1">承包商看神韵感受“爱和慈善”的信息</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/12/31/n13471693.md#1">公司老板：疫情当下 神韵让人坚强给人希望</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/12/31/n13471805.md#1">神韵橙县首场售罄 观众赞神韵总监是天才</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13628809.md#1">【微视频】俄罗斯若被拖残 中共倒台时机出现</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13628844.md#1">【方菲访谈】章家敦：中共暗助俄罗斯</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629649.md#1">战地记者Michael Yon：俄乌战争带来全球灾难</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/1/n13612944.md#1">专家点评：七类对心脏健康最不好的食物</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626434.md#1">一位医生分享：常吃五种食物 大大增强免疫</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/2/n13616600.md#1">俄乌战 习近平对普京误判 北京恐陷入风险</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629675.md#1">大S徐熙媛与“酷龙”具俊晔续前缘 宣布结婚</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626449.md#1">瑞莎曝乌克兰惨况 发文感谢台湾援助家乡</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/5/n13624142.md#1">【健康1+1】比尔盖茨：下场流行将至 疫苗过时？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/2/26/n13606897.md#1">雨天鞋子湿掉怎么办？4方法可速干、不发臭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/1/n13474247.htm">神韵加州橙县大爆满 主流精英享受非凡之旅</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/1/n13474247.htm">神韵加州橙县大爆满 主流精英享受非凡之旅</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yvrwxa344/djy/blob/master/gb/22/1/1/n13474247.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/22/1/1/n13474247.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
